--- a/stop_play_youtube/manifest.json
+++ b/stop_play_youtube/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
-  "name": "Manage video",
-  "version": "1.2",
-  "description": "Shows a window to manage video",
+  "name": "pause_video",
+  "version": "1.3.2",
+  "description": "window to stop video",
 
   "background": {
     "service_worker": "background.js"
